src-inject/vscode-frosted-glass-theme.css
/* Animation */
@keyframes fgtZoomIn {
  from {
    transform: perspective(100px) translateZ(-100px);
  }
  to {
    transform: perspective(100px) translateZ(0);
  }
}

@keyframes fgtDropdown {
  from {
    transform: translateY(-100%);
  }
  0%,
  99% {
    pointer-events: none;
  }
  to {
    transform: translateY(0);
  }
}

@keyframes fgtFlyout {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(0);
  }
}

/* Title Bar */
.window-title {
  transition: var(--fgt-transition);
}

.window-icon {
  transition: var(--fgt-transition);
}

/* Action Bar */
.action-label.codicon {
  transition:
    color var(--fgt-transition),
    background-color var(--fgt-transition);
}

/* Command Panel */
.quick-input-widget .monaco-list-rows {
  background-color: transparent !important;
}

/* Menu */
.monaco-scrollable-element .invisible {
  opacity: 0 !important;
  pointer-events: none;
}

/* Notification Panel */
.notification-toast {
  background-color: transparent !important;
  transition: var(--fgt-transition);
}

/* Minimap */
.minimap canvas:not(.minimap-decorations-layer) {
  opacity: var(--fgt-minimap-opacity);
  transition: var(--fgt-transition);
}

.minimap:hover canvas:not(.minimap-decorations-layer) {
  opacity: 1;
  transition: var(--fgt-transition);
}

/* Scroll Bar */
:is(
    .editor-scrollable > .scrollbar.horizontal > .slider,
    .monaco-scrollable-element:not(.editor-scrollable) > .scrollbar > .slider
  ):hover {
  background-color: var(--vscode-scrollbarSlider-hoverBackground) !important;
}

/* Setting Page */
.setting-item-contents.settings-row-inner-container {
  transition: var(--fgt-transition);
}

/* Breadcrumbs Picker */
.monaco-breadcrumbs-picker .monaco-list-rows {
  background-color: transparent !important;
}

/* Debug Tool Bar */
.debug-toolbar:has(.monaco-dropdown.active) {
  backdrop-filter: none;
  background-color: var(--vscode-debugToolBar-background) !important;
}

/* Debug Hover Widget */
.debug-hover-widget .monaco-list-rows {
  background-color: transparent !important;
}

/* Custom Dialog Box */
[role="application"] {
  --fgt-dimmed-background: rgba(255, 255, 255, 0.3);
}

[role="application"].vs-dark,
[role="application"].hc-black {
  --fgt-dimmed-background: rgba(0, 0, 0, 0.3);
}

@keyframes fgtFadeIn {
  from {
    background-color: transparent;
  }
  to {
    background-color: var(--fgt-dimmed-background);
  }
}

.dimmed {
  animation: 300ms linear 0s 1 forwards fgtFadeIn;
}

/* Menu Animation */
.monaco-menu-container,
.context-view {
  clip-path: inset(-1px calc(-infinity * 1px) calc(-infinity * 1px));
}

@supports not (clip-path: inset(1px)) {
  .monaco-menu-container,
  .context-view {
    overflow: clip !important;
    overflow-clip-margin: 10px !important;
  }
}

/* Dropdown Animation */
.select-container > .context-view {
  clip-path: inset(0px calc(-infinity * 1px) calc(-infinity * 1px));
}

@supports not (clip-path: inset(1px)) {
  .select-container > .context-view {
    overflow-clip-margin: 0px !important;
  }
}

/* Hover Animation */
div[widgetid="editor.contrib.resizableContentHoverWidget"] {
  overflow: clip !important;
}

/* Sticky Widget */
.sticky-widget > * {
  background-color: transparent !important;
}

/* Tree Sticky Container */
.monaco-tree-sticky-container > * {
  background-color: transparent !important;
}

/* Panel Header */
.pane-header.expanded:has(.monaco-dropdown.active) {
  z-index: 2500;
  backdrop-filter: none;
}

.pane-header.expanded {
  z-index: 15;
}

.pane-header {
  flex-shrink: 0;
}

.pane-body {
  pointer-events: none;
}

.pane-body > * {
  pointer-events: auto;
}

.pane-body,
.pane-body .monaco-list > .monaco-scrollable-element {
  overflow: visible !important;
  clip-path: inset(-22px);
}

@supports not (clip-path: inset(1px)) {
  .pane-body,
  .pane-body .monaco-list > .monaco-scrollable-element {
    overflow: clip !important;
    overflow-clip-margin: 22px;
  }
}

.search-view .results,
.test-explorer-tree {
  overflow: hidden !important;
}

/* Cell Title Toolbar */
.cell-title-toolbar:has(.monaco-dropdown.active) {
  backdrop-filter: none;
  background-color: var(--vscode-editor-background) !important;
}

/* Terminal Overlay */
.xterm-scrollable-element {
  background-color: transparent !important;
}

